--- a/coronavirus-tracker/src/main/resources/templates/home.html
+++ b/coronavirus-tracker/src/main/resources/templates/home.html
@@ -5,13 +5,14 @@
 <head>
     <title>Corona Virus Tracker</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
 </head>
 
 <body>
 
-<p th:text="${dataStore}"></p>
-
+<h1>Coronavirus Tracker Application</h1>
+<p>This application lists the current number of cases reported across the world!</p>
 <table>
     <tr>
         <th>State</th>
