--- a/coronavirus-tracker/src/main/resources/templates/home.html
+++ b/coronavirus-tracker/src/main/resources/templates/home.html
@@ -5,8 +5,7 @@
 <head>
     <title>Corona Virus Tracker</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
@@ -23,20 +22,27 @@
 <!--        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>-->
 <!--    </p>-->
 </div>
+
+<div class="container">
+
 <table>
     <tr>
         <th>State</th>
         <th>Country</th>
         <th>Total cases reported</th>
+        <th>Changes since last day</th>
     </tr>
     <tr th:each="locationStat : ${locationStats}">
 
         <td th:text="${locationStat.state}"></td>
         <td th:text="${locationStat.Country}"></td>
         <td th:text="${locationStat.latestTotalCases}">0</td>
+        <td th:text="${locationStat.diffFromPrevDay}">0</td>
 
     </tr>
 </table>
+
+</div>
 
 </body>
 
