--- a/coronavirus-tracker/src/main/resources/templates/home.html
+++ b/coronavirus-tracker/src/main/resources/templates/home.html
@@ -4,45 +4,45 @@
 
 <head>
     <title>Corona Virus Tracker</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
-
 <div class="container">
 
-<h1>Coronavirus Tracker Application</h1>
-<p>This application lists the current number of cases reported across the globe!</p>
+    <h1>Coronavirus Tracker Application</h1>
+    <p>This application lists the current number of cases reported across the globe!</p>
 
-<div class="jumbotron">
-    <h1 class="display-4" th:text="${totalReportedCases}"></h1>
-    <p class="lead">Total cases reported as of today.</p>
-<!--    <hr class="my-4">-->
-<!--    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>-->
-<!--    <p class="lead">-->
-<!--        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>-->
-<!--    </p>-->
-</div>
+    <div class="jumbotron">
+        <h1 class="display-4" th:text="${totalReportedCases}"></h1>
+        <p class="lead">Total cases reported as of today.</p>
+        <hr class="my-4">
+        <p>
+            <span>New cases reported since previous day:</span>
+            <span th:text="${totalNewCases}"></span>
+        </p>
+        </div>
 
-<table class="table">
-    <tr>
-        <th>State</th>
-        <th>Country</th>
-        <th>Total cases reported</th>
-        <th>Changes since last day</th>
-    </tr>
-    <tr th:each="locationStat : ${locationStats}">
+        <table class="table">
+            <tr>
+                <th>State</th>
+                <th>Country</th>
+                <th>Total cases reported</th>
+                <th>Changes since last day</th>
+            </tr>
+            <tr th:each="locationStat : ${locationStats}">
 
-        <td th:text="${locationStat.state}"></td>
-        <td th:text="${locationStat.Country}"></td>
-        <td th:text="${locationStat.latestTotalCases}">0</td>
-        <td th:text="${locationStat.diffFromPreviousDay}">0</td>
+                <td th:text="${locationStat.state}"></td>
+                <td th:text="${locationStat.Country}"></td>
+                <td th:text="${locationStat.latestTotalCases}">0</td>
+                <td th:text="${locationStat.diffFromPreviousDay}">0</td>
 
-    </tr>
-</table>
+            </tr>
+            </table>
 
-</div>
+    </div>
 
 </body>
 
